# LingFlow

./: .env.example  .gitignore  AGENT.md  CNAME  README.md  index.html  package.json  pnpm-lock.yaml  style.css  turbo.json
.github/workflows/: release.yml
apps/app/: package.json  vite.config.ts
apps/app/src/: App.tsx  index.css  main.tsx
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json  windows-global-shortcut.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: lib.rs
apps/app/src/components/: lingflow-logo.tsx  ui.tsx
apps/extension/: index.html  manifest.ts  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/extension/src/: App.css  App.tsx  background.ts  content.ts  index.css
apps/extension/src/components/: lingflow-logo.tsx  popup-ui.tsx
apps/extension/src/shared/: messages.test.ts  messages.ts
design_handoff/: critique.json  desktop-dashboard.html  extension-popup.html  mobile-dashboard.html  shared-components.css  shared-components.js
