[package]
name = "app"
version = "0.4.0"
description = "LingFlow cross-platform translation client"
authors = ["LingFlow Contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tiny_http = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-opener = "2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }
tauri-plugin-global-shortcut = "2"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
